@@ -1,4 +1,4 @@
-m4trace:configure.ac:5: -1- AC_INIT([gsequencer], [0.6.34], [jkraehemann-guest@users.alioth.debian.org])
+m4trace:configure.ac:5: -1- AC_INIT([gsequencer], [0.6.35], [jkraehemann-guest@users.alioth.debian.org])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
